Progess on mobile bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,6 @@ a:active {
 #main {
   position:fixed;
   top:50px;
-  box-shadow: 0px 0px 5px;
 }
 .key {
   width:110%;
